--- a/index.html
+++ b/index.html
@@ -17,7 +17,25 @@
           <h2>Simple Calculator</h2>
         </div>
         <div class="output-frame">
-          <h2 id="output">1</h2>
+          <h2 id="output">0</h2>
+        </div>
+        <div class="btn-frame">
+          <input class="btn numbers" type="button" value="7" />
+          <input class="btn numbers" type="button" value="8" />
+          <input class="btn numbers" type="button" value="9" />
+          <input class="btn operators" type="button" value="&#247;" />
+          <input class="btn numbers" type="button" value="4" />
+          <input class="btn numbers" type="button" value="5" />
+          <input class="btn numbers" type="button" value="6" />
+          <input class="btn operators" type="button" value="x" />
+          <input class="btn numbers" type="button" value="1" />
+          <input class="btn numbers" type="button" value="2" />
+          <input class="btn numbers" type="button" value="3" />
+          <input class="btn operators" type="button" value="-" />
+          <input class="btn special-clear" type="button" value="C" />
+          <input class="btn numbers" type="button" value="0" />
+          <input class="btn operators" type="button" value="=" />
+          <input class="btn operators" type="button" value="+" />
         </div>
       </div>
     </div>
