--- a/index.html
+++ b/index.html
@@ -20,22 +20,27 @@
           <h2 id="output">0</h2>
         </div>
         <div class="btn-frame">
-          <input class="btn numbers" type="button" value="7" />
-          <input class="btn numbers" type="button" value="8" />
-          <input class="btn numbers" type="button" value="9" />
-          <input class="btn operators" type="button" value="&#247;" />
-          <input class="btn numbers" type="button" value="4" />
-          <input class="btn numbers" type="button" value="5" />
-          <input class="btn numbers" type="button" value="6" />
-          <input class="btn operators" type="button" value="x" />
-          <input class="btn numbers" type="button" value="1" />
-          <input class="btn numbers" type="button" value="2" />
-          <input class="btn numbers" type="button" value="3" />
-          <input class="btn operators" type="button" value="-" />
-          <input class="btn special-clear" type="button" value="C" />
-          <input class="btn numbers" type="button" value="0" />
-          <input class="btn operators" type="button" value="=" />
-          <input class="btn operators" type="button" value="+" />
+          <input id="int-btn" class="btn numbers" type="button" value="7" />
+          <input id="int-btn" class="btn numbers" type="button" value="8" />
+          <input id="int-btn" class="btn numbers" type="button" value="9" />
+          <input id="opr-btn" class="btn operators" type="button" value="÷" />
+          <input id="int-btn" class="btn numbers" type="button" value="4" />
+          <input id="int-btn" class="btn numbers" type="button" value="5" />
+          <input id="int-btn" class="btn numbers" type="button" value="6" />
+          <input id="opr-btn" class="btn operators" type="button" value="x" />
+          <input id="int-btn" class="btn numbers" type="button" value="1" />
+          <input id="int-btn" class="btn numbers" type="button" value="2" />
+          <input id="int-btn" class="btn numbers" type="button" value="3" />
+          <input id="opr-btn" class="btn operators" type="button" value="-" />
+          <input
+            id="opr-btn"
+            class="btn special-clear"
+            type="button"
+            value="C"
+          />
+          <input id="int-btn" class="btn numbers" type="button" value="0" />
+          <input id="opr-btn" class="btn operators" type="button" value="=" />
+          <input id="opr-btn" class="btn operators" type="button" value="+" />
         </div>
       </div>
     </div>
