cont work on logic

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
           <h2 id="output">0</h2>
         </div>
         <div class="btn-frame">
-          <input id="int-btn" class="btn numbers" type="button" value="7" />
-          <input id="int-btn" class="btn numbers" type="button" value="8" />
-          <input id="int-btn" class="btn numbers" type="button" value="9" />
+          <input id="int-btn" class="btn" type="button" value="7" />
+          <input id="int-btn" class="btn" type="button" value="8" />
+          <input id="int-btn" class="btn" type="button" value="9" />
           <input id="opr-btn" class="btn operators" type="button" value="÷" />
-          <input id="int-btn" class="btn numbers" type="button" value="4" />
-          <input id="int-btn" class="btn numbers" type="button" value="5" />
-          <input id="int-btn" class="btn numbers" type="button" value="6" />
+          <input id="int-btn" class="btn" type="button" value="4" />
+          <input id="int-btn" class="btn" type="button" value="5" />
+          <input id="int-btn" class="btn" type="button" value="6" />
           <input id="opr-btn" class="btn operators" type="button" value="x" />
-          <input id="int-btn" class="btn numbers" type="button" value="1" />
-          <input id="int-btn" class="btn numbers" type="button" value="2" />
-          <input id="int-btn" class="btn numbers" type="button" value="3" />
+          <input id="int-btn" class="btn" type="button" value="1" />
+          <input id="int-btn" class="btn" type="button" value="2" />
+          <input id="int-btn" class="btn" type="button" value="3" />
           <input id="opr-btn" class="btn operators" type="button" value="-" />
           <input
             id="opr-btn"
