--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Simple Calc</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Simple Calculator</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="http://fonts.googleapis.com/css?family=Ubuntu&subset=cyrillic,latin"
